try and fix background img issue

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -198,7 +198,7 @@ h3 {
 	background: url("../images/IMG_1278.jpg");
 
     /* Center and scale the image nicely */
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
