--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -57,7 +57,7 @@ blockquote * {
 
 /* */
 .row .col {
-    padding: 0 0.50rem;
+    padding:0 0 0.25rem 0.25rem; /*(top,right,bottom,Left) */
 }
 
 /* */
@@ -198,7 +198,6 @@ h3 {
 	background: url("../images/IMG_1278.jpg");
 
     /* Center and scale the image nicely */
-    /* background-attachment: fixed; */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
