--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -57,7 +57,7 @@ blockquote * {
 
 /* */
 .row .col {
-    padding:0 0 0.25rem 0.25rem; /*(top,right,bottom,Left) */
+    /* padding:0 0 0.25rem 0.25rem; (top,right,bottom,Left) */
 }
 
 /* */
