changes to icons and text

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -55,6 +55,19 @@ blockquote * {
     margin-right: 20px
 }
 
+/* Experiance text */
+.exp-text {
+    color:#505160 !important; /* Thundercloud */
+    font-size: 13px;
+    margin-top: 6px;
+    vertical-align: middle;
+}
+
+/* Skills-text*/
+.skills-text {
+    color:#505160 !important; /* Thundercloud */
+}
+
 /* */
 .text-center {
 	text-align: center;
@@ -365,7 +378,7 @@ a.hoverline:hover {
 #skills .col img.responsive-img {
 	margin: 0 auto;
 	max-height: 100px;
-	padding-bottom: 5px;
+    padding: 5px 0 5px 0;
 	text-align: center;
 	vertical-align: middle;
     display: table-cell;
@@ -374,16 +387,19 @@ a.hoverline:hover {
 #skills-it .col img.responsive-img {
     margin: 0 auto;
     max-height: 100px;
-    /* padding-bottom: 10px; */
+    padding: 5px 0 5px 0;
     text-align: center;
     vertical-align: middle;
     display: table-cell;
 }
 
-.card.large .card-content p {
-	color: inherit;
-	margin: 0;
-	padding: 30px 0;
+img.exp-img {
+    margin: 0 auto;
+    max-height: 50px;
+    padding: 5px 0 5px 0;
+    text-align: center;
+    vertical-align: middle;
+    display: table-cell;
 }
 
 #experience .card-content .row {
@@ -440,6 +456,18 @@ a.hoverline:hover {
 @media (min-width: 993px) {
     .row .col.l2 {
     padding:0 0 0 0.45rem; /*(top,right,bottom,Left) */
+    }
+
+    /* Center icons in card */
+    #skills .row,
+    #skills-it .row {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    }
+
+    #other .row {
+     justify-content: flex-start;
     }
 }
 
@@ -556,11 +584,6 @@ a.hoverline:hover {
         margin-right: 10px
     }
 
-    /* Change color of text */
-    .text-icon {
-    font-size: 14px;
-    color:#505160;
-    }
 }
 
 /* ----- Changes to Footer -----*/
