--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -261,9 +261,13 @@ h3 {
     text-align: center;
 }
 
+.collapsible li {
+    transition: 0.7s;
+}
+
 .card {
-    border-radius: 0.45rem;
-    margin-bottom: 40px;
+    /* border-radius: 0.45rem; */
+    /* margin-bottom: 40px; */
 }
 
 .card .role {
@@ -588,6 +592,10 @@ img.exp-img {
         font-size: 22px;
         line-height: 150%;
         margin: 30px 0 0;
+    }
+
+    h3 {
+        font-size: 2rem;
     }
 
     #intro.section .container *:not(span) {
