--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -252,7 +252,7 @@ h3 {
 }
 
 .collapsible-body {
-    margin: 0px 0px 5px 0px;
+    /*margin: 0px 0px 5px 0px; */
 }
 
 .collapsible-header {
@@ -261,8 +261,16 @@ h3 {
     text-align: center;
 }
 
+
 .collapsible li {
     transition: 0.7s;
+}
+
+.collapsible li.active i {
+  -ms-transform: rotate(90deg); /* IE 9 */
+  -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+  transform: rotate(90deg);
+  color: green !important;
 }
 
 .card {
